--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Lobster+Two:ital,wght@0,400;0,700;1,400;1,700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Lobster+Two:ital,wght@0,400;0,700;1,400;1,700&family=Quicksand:wght@300..700&display=swap"
       rel="stylesheet"
     />
 
@@ -125,17 +125,128 @@
           <div class="text-center">
             <div id="large-title" class="text-primary lobster-two-bold">
               <h1 class="display-3">Happy 3rd Anniversary</h1>
-              <h1 class="display-2">Ronalyn ❤️</h1>
+              <h1 class="display-2">Bee!</h1>
             </div>
             <p
               class="text-secondary lead lobster-two-regular mx-5 fs-6 fs-sm-1 fs-md-1 fs-lg-1"
             >
               You are my everything, and I cherish every moment with you.
             </p>
-            <a href="reasons.html" class="btn-primary btn rounded-pill">
-              Discover Why ❤</a
-            >
-            <div class="scrim"></div>
+            <div class="heartbox">
+              <input
+                type="checkbox"
+                class="checkbox bg-primary"
+                id="checkbox"
+              />
+              <label
+                for="checkbox"
+                onclick="setTimeout(function() { window.location.href='reasons.html'; }, 700)"
+              >
+                <svg
+                  id="heart-svg"
+                  viewBox="467 392 58 57"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <g
+                    id="Group"
+                    fill="none"
+                    fill-rule="evenodd"
+                    transform="translate(467 392)"
+                  >
+                    <path
+                      d="M29.5 29.5c-.189-.39-12.681-26.01-34.32-7.77C-35.043 53.566 28.887 96.949 29.496 97.363c.612-.414 64.539-43.8 34.32-75.639-21.642-18.24-34.131 7.38-34.32 7.77z"
+                      id="heart"
+                      fill="#e2264d"
+                    />
+                    <!-- Add text inside the SVG -->
+                    <text
+                      id="heartText"
+                      x="50%"
+                      y="100%"
+                      text-anchor="middle"
+                      fill="white"
+                      font-size="9"
+                      font-family="'Quicksand', sans-serif"
+                      dy=".3em"
+                    >
+                      Discover Why
+                    </text>
+                    <circle
+                      id="main-circ"
+                      fill="#E2264D"
+                      opacity="0"
+                      cx="29"
+                      cy="29.65"
+                      r="3"
+                    />
+                    <g
+                      id="heartgroup7"
+                      opacity="0"
+                      transform="translate(-10 120)"
+                    >
+                      <circle id="heart1" fill="#9CD8C3" cx="2" cy="6" r="6" />
+                      <circle id="heart2" fill="#8CE8C3" cx="5" cy="2" r="6" />
+                    </g>
+                    <g
+                      id="heartgroup6"
+                      opacity="0"
+                      transform="translate(-40 50)"
+                    >
+                      <circle id="heart1" fill="#CC8EF5" cx="2" cy="7" r="6" />
+                      <circle id="heart2" fill="#91D2FA" cx="3" cy="2" r="6" />
+                    </g>
+                    <g
+                      id="heartgroup3"
+                      opacity="0"
+                      transform="translate(-50 0)"
+                    >
+                      <circle id="heart2" fill="#9CD8C3" cx="2" cy="7" r="6" />
+                      <circle id="heart1" fill="#8CE8C3" cx="4" cy="2" r="6" />
+                    </g>
+                    <g id="heartgroup2" opacity="0" transform="translate(80 0)">
+                      <circle id="heart2" fill="#CC8EF5" cx="5" cy="6" r="6" />
+                      <circle id="heart1" fill="#CC8EF5" cx="2" cy="2" r="6" />
+                    </g>
+                    <g
+                      id="heartgroup5"
+                      opacity="0"
+                      transform="translate(115 50)"
+                    >
+                      <circle id="heart1" fill="#91D2FA" cx="6" cy="5" r="6" />
+                      <circle id="heart2" fill="#91D2FA" cx="2" cy="2" r="6" />
+                    </g>
+                    <g
+                      id="heartgroup4"
+                      opacity="0"
+                      transform="translate(60 110)"
+                    >
+                      <circle id="heart1" fill="#F48EA7" cx="6" cy="5" r="6" />
+                      <circle id="heart2" fill="#F48EA7" cx="2" cy="2" r="6" />
+                    </g>
+                    <g
+                      id="heartgroup1"
+                      opacity="0"
+                      transform="translate(24 -20)"
+                    >
+                      <circle
+                        id="heart1"
+                        fill="#9FC7FA"
+                        cx="2.5"
+                        cy="3"
+                        r="8"
+                      />
+                      <circle
+                        id="heart2"
+                        fill="#9FC7FA"
+                        cx="7.5"
+                        cy="2"
+                        r="8"
+                      />
+                    </g>
+                  </g>
+                </svg>
+              </label>
+            </div>
           </div>
         </div>
       </div>
