--- a/reasons.html
+++ b/reasons.html
@@ -21,19 +21,86 @@
     <!-- CSS bootstrap template and custom style -->
     <link href="css/bs-template.css" rel="stylesheet" />
     <link href="css/style.css" rel="stylesheet" />
-  </head>
-  <body>
-    <main>
-      <div class="container text-center mt-5">
-        <div class="heart">❤️</div>
-        <h2 class="mt-4">Here are the reasons why I love you...</h2>
-        <!-- Add more content here as needed -->
-        <a href="index.html" class="btn btn-primary mt-4">Return to Home</a>
-      </div>
-    </main>
 
+    <style>
+      html,
+      body {
+        height: 100%;
+        margin: 0;
+      }
+      body {
+        background-image: url("public/assets/img/tulip-bg.webp");
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+      }
+      .modal-dialog {
+        margin-top: 2rem; /* Adjust this value to lower the modal */
+      }
+    </style>
+  </head>
+
+  <body>
+    <div class="d-flex justify-content-center align-items-center">
+      <main>
+        <!-- Back Home Button -->
+        <div class="text-center mt-3">
+          <a href="index.html" class="btn btn-primary">Back Home</a>
+        </div>
+        <div class="container">
+          <!-- Generate 36 tulip icons -->
+          <!-- Use a loop to generate the icons dynamically -->
+          <div class="col-12" id="tulip-container">
+            <!-- Tulip icons will be inserted here by JavaScript -->
+          </div>
+        </div>
+
+        <!-- Scroll hint -->
+        <div class="scroll-hint">Scroll down to see more tulips</div>
+
+        <!-- Modal -->
+        <div
+          class="modal fade"
+          id="tulipModal"
+          tabindex="-1"
+          role="dialog"
+          aria-labelledby="tulipModalLabel"
+          aria-hidden="true"
+        >
+          <div class="modal-dialog" role="document">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="tulipModalLabel">Tulip Reason</h5>
+                <button
+                  type="button"
+                  class="close"
+                  data-dismiss="modal"
+                  aria-label="Close"
+                >
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+              <div class="modal-body">
+                <div class="modal-text fs-6 fs-sm-5 fs-md-4 fs-lg-3">
+                  This is the reason why...
+                </div>
+              </div>
+              <div class="modal-footer">
+                <button
+                  type="button"
+                  class="btn btn-secondary"
+                  data-dismiss="modal"
+                >
+                  Close
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </main>
+    </div>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <script src="scripts.js"></script>
+    <script src="js/index.js"></script>
   </body>
 </html>
