--- a/reasons.html
+++ b/reasons.html
@@ -134,8 +134,8 @@
             let foundPortrait = false;
             let foundLandscape = false;
 
-            // Try different extensions
-            for (const ext of ["png", "jpg", "jpeg"]) {
+            // Add webp to supported extensions
+            for (const ext of ["webp", "png", "jpg", "jpeg"]) {
               const portraitUrl = `public/assets/img/Portrait/Modal/${pictureSet}/Modal-${index}.${ext}`;
               const landscapeUrl = `public/assets/img/Landscape/Modal/${pictureSet}/Modal-${index}.${ext}`;
 
